Move all AppMek items to integration pkg